# contract/openapi.json
@@ -255,6 +255,16 @@
       "CompletionUpdate": {
         "additionalProperties": false,
         "properties": {
+          "activity": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/Activity"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "note": {
             "anyOf": [
               {
